# LIGO.

./: CMakeLists.txt  LICENSE  README.md  package.xml
Data/: Mongkok.pos  TST.pos  UrbanNav_mongkok_GT_part_raw.txt  UrbanNav_whampoa_raw.txt  Wha.pos  bridge2.pos  deg1.pos  deg2.pos  gil.pos  gt_deg1.txt  gt_deg2.txt  gt_deg3.txt  parking2.pos  switch2.pos  switch2_rawcut.txt  tree3.pos  tree3x.txt
Log/: .txt  mat_out.txt  pos_est.txt  pos_ppp.txt  pos_rtk.txt  time_out.txt
config/: avia.yaml  hesai.yaml  robosense.yaml  velody.yaml
include/: chi-square.h  common_lib.h  matplotlibcpp.h  so3_math.h
include/Curvefitter/: curvefitter.hpp  lidar_feature_factor.h  se3_trajectory.hpp  trajectory_estimator.hpp
include/IKFoM/IKFoM_toolkit/esekfom/: esekfom.hpp
include/IKFoM/IKFoM_toolkit/mtk/types/: SOn.hpp
include/Urbannav_process/: gnss_tools.h  handler.cpp  handler.h
include/Urbannav_process/nlosExclusion/: DOP.h  Error.h  GNSS_Raw.h  GNSS_Raw_Array.h  GNSS_Raw_mf.h  Satellite_Info.h  exclusionSatNum.h
include/basalt/spline/: ceres_local_param.hpp  ceres_spline_helper_jet.h  se3_spline.h
include/gnss_factor/: gnss_cp_factor.hpp  gnss_cp_factor_nolidar.hpp  gnss_cp_factor_nolidar_c.hpp  gnss_cp_factor_nolidar_pos.hpp  gnss_cp_factor_nor.hpp  gnss_cp_factor_pos.hpp  gnss_ddt_smooth_factor.hpp  gnss_dt_ddt_factor.hpp  gnss_lio_factor.hpp  gnss_lio_factor_nolidar.hpp  gnss_lio_gravity_factor.hpp  gnss_lio_gravity_hard_factor.hpp  gnss_lio_hard_factor.hpp  gnss_lio_hard_factor_nor.hpp  gnss_lio_rel_factor.hpp  gnss_prior_factor.hpp  gnss_psr_dopp_factor.hpp  gnss_psr_dopp_factor_nolidar.hpp  gnss_psr_dopp_factor_nolidar_pos.hpp  gnss_psr_dopp_factor_nor.hpp  gnss_psr_dopp_factor_pos.hpp  integration_base.h
include/ivox/: ivox3d.h  ivox3d_node.hpp
include/nmea_factor/: nmea_factor.hpp  nmea_factor_nolidar.hpp  nmea_lio_factor.hpp  nmea_lio_gravity_hard_factor.hpp  nmea_lio_gravity_rel_factor.hpp  nmea_pos_factor.hpp  nmea_pos_factor_nolidar.hpp
launch/: gdb_debug_example.launch  mapping_avia.launch  mapping_hesai32.launch  mapping_horizon.launch  mapping_ouster64.launch  mapping_robosense.launch  mapping_velody16.launch
rviz_cfg/: loam_livox.rviz
src/: Estimator.cpp  Estimator.h  GNSS_Assignment.cpp  GNSS_Assignment.h  GNSS_Initialization.cpp  GNSS_Initialization.h  GNSS_Processing_fg.cpp  GNSS_Processing_fg.h  IMU_Processing.cpp  IMU_Processing.h  NMEA_Assignment.cpp  NMEA_Assignment.h  NMEA_Processing_fg.cpp  NMEA_Processing_fg.h  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
